src/objects/Attendee__c.object
<CustomObject>
    <description>Tracks the Attendees for Conferences and Events tracked through the Event Approval application. This object will have a separate approval process from the Event or conference</description>
    <fields>
        <fullName>Approval_Step_Hidden__c</fullName>
        <description>Used to send an email that record has moved to the next level once the Approval Step hits 3 and the conference is a Non Federally Funded Conference- This field will be moved by workflow</description>
        <label>Approval Step Hidden</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Step 1 - User Choose</fullName>
                </value>
                <value>
                    <fullName>Approval Step 2 - OSC</fullName>
                </value>
                <value>
                    <fullName>Approval Step 3 - User Choose</fullName>
                </value>
                <value>
                    <fullName>Approval Step 4 - OGC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendee_Destination_s__c</fullName>
        <inlineHelpText>Enter city and state for CONUS requests.
Enter city and territory/country for OCONUS requests.</inlineHelpText>
        <label>Destination(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Discounted_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sponsor has agreed to reduce your fee for your participation in the event. This is not an early-bird registration fee.</description>
        <inlineHelpText>Sponsor has agreed to reduce your fee for your participation in the event. This is not an early-bird registration fee.</inlineHelpText>
        <label>Discounted Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Duplicate_Hidden__c</fullName>
        <description>This is a hidden field on the attendee record that will update via workflow to not allow the same person to request to go to a specific conference, more than once.</description>
        <label>Attendee Duplicate Hidden</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Attendee_Email_Address__c</fullName>
        <formula>IF( ISBLANK( Submitting_On_Behalf_Of__c ) ,  CreatedBy.Email ,  Submitting_On_Behalf_Of__r.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Estimated_Departure_Date__c</fullName>
        <label>Estimated Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attendee_Event_Disclaimer__c</fullName>
        <defaultValue>&quot;ALERT: PLEASE ENSURE THAT THE REQUESTED EVENT DOES NOT ALREADY EXIST IN EVENT TRACKER. Search for the event, including any possible variations in naming convention or abbreviation, to ensure it does not already exist in the application before creating a new event.&quot;</defaultValue>
        <label>Disclaimer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendee_In_Kind_Travel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sponsor to provide or pay for all or part of transportation, lodging, and/or meals</description>
        <inlineHelpText>Sponsor to provide or pay for all or part of transportation, lodging, and/or meals.</inlineHelpText>
        <label>In-Kind Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_International_Disclaimer__c</fullName>
        <defaultValue>&quot;A “gift” includes any gratuity, favor, discount, entertainment, hospitality, loan, forbearance, or other item, including promotional items, having monetary value provided or reimbursed by a non-government source. It includes services as well as gifts of or discounts on training, registration, transportation, lodging and meals, whether provided in-kind, by purchase of a ticket, payment in advance, or reimbursement after the expense has been incurred. Travel cannot occur until acceptance of a gift has been approved by OGC and travel has been approved by the Deputy Administrator.&quot;</defaultValue>
        <label>Disclaimer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendee_Justification_Disclaimer__c</fullName>
        <defaultValue>&quot;Justification for attending a conference must address the attendee’s individual and specific reason for attending the event. The reason must meet one or more of GSA’s established acceptable criteria for conference attendance, to include: a) having business meetings with GSA customers, the public, or vendors; b) providing GSA operational support for the conference; c) providing training or speaking related to GSA mission; and/or d) fulfilling legitimate training requirements pertaining to an employee’s job functions in accordance with individual development plans.&quot;</defaultValue>
        <label>Disclaimer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <formula>IF( ISBLANK( Submitting_On_Behalf_Of__c ) , ( CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName ), ( Submitting_On_Behalf_Of__r.FirstName + &quot; &quot; +  Submitting_On_Behalf_Of__r.LastName ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Non_Gov_Funding_Disclaimer__c</fullName>
        <defaultValue>&quot;A “gift” includes any gratuity, favor, discount, entertainment, hospitality, loan, forbearance, or other item, including promotional items, having monetary value provided or reimbursed by a non-government source. It includes services as well as gifts of or discounts on training, registration, transportation, lodging and meals, whether provided in-kind, by purchase of a ticket, payment in advance, or reimbursement after the expense has been incurred. This applies to both travel events and local events. Travel cannot occur until acceptance of a gift has been approved by OAS and OGC.&quot;</defaultValue>
        <label>Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendee_Purpose_of_Travel__c</fullName>
        <label>Purpose of Travel</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Region__c</fullName>
        <inlineHelpText>Please select the region for the requesting attendee</inlineHelpText>
        <label>Attendee Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>Region 11</fullName>
                </value>
                <value>
                    <fullName>Central Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendee_Staff_Service_Office__c</fullName>
        <description>Please choose the Staff or service office of the requesting attendee.</description>
        <label>Attendee Service/Staff Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>AK - Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>B - Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>C - Office of Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>D - Office of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilan Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H - Office of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>I - Office of the Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>J - Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L - Office of General Counsel</fullName>
                </value>
                <value>
                    <fullName>M - Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>O - Office of Customer Experience</fullName>
                </value>
                <value>
                    <fullName>P - Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q - Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S - Office of Congressional &amp; Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>Z - Office of Strategic Communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendee_Telephone_Number__c</fullName>
        <formula>IF( ISBLANK( Submitting_On_Behalf_Of__c ) ,  CreatedBy.Phone ,  Submitting_On_Behalf_Of__r.Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Telephone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Title__c</fullName>
        <formula>IF( ISBLANK( Submitting_On_Behalf_Of__c ) ,  CreatedBy.Title ,  Submitting_On_Behalf_Of__r.Title )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_of_Funding_None__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of funding</description>
        <inlineHelpText>All funding provided by GSA or another US government agency. Do not select if there is a waived registration fee.</inlineHelpText>
        <label>None</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Waived_Registration_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sponsor has agreed to waive your registration fee, which is not offered to the general public.</description>
        <inlineHelpText>Sponsor has agreed to waive your registration fee, which is not offered to the general public.</inlineHelpText>
        <label>Waived Registration Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attending_End_Date__c</fullName>
        <label>Attending End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attending_Start_Date__c</fullName>
        <label>Attending Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_Employee_have_a_valid_passport__c</fullName>
        <label>Does Employee have a valid passport?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_employee_have_a_security_clearance__c</fullName>
        <inlineHelpText>Secret or Top Secret</inlineHelpText>
        <label>Does employee have a security clearance?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Return_Date__c</fullName>
        <label>Estimated Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <formula>Event_Number__r.EA_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Location_For_Email_Template__c</fullName>
        <formula>Event_Number__r.Conference_Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Location For Email Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Identifier</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Please select a GSA Sponsored Conference or Non GSA Sponsored Conference only.</errorMessage>
            <filterItems>
                <field>Event_Approval__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>GSA Sponsored Conference, Non GSA Sponsored Conference</value>
            </filterItems>
            <filterItems>
                <field>Event_Approval__c.EA_End_Date__c</field>
                <operation>greaterOrEqual</operation>
                <valueField>$Source.CreatedDate</valueField>
            </filterItems>
            <filterItems>
                <field>Event_Approval__c.Event_Type_Hidden__c</field>
                <operation>notEqual</operation>
                <value>Over</value>
            </filterItems>
            <infoMessage>Please select a GSA Sponsored Conference or Non GSA Sponsored Conference. Attendee requests for Internal Management Meetings and Award Ceremonies are not required.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Approval__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <formula>Event_Number__r.EA_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <formula>Event_Number__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Website_URL__c</fullName>
        <description>Event Website/URL</description>
        <label>Event Website/URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <formula>Event_Number__r.EA_Event_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_open_to_press_or_media_sponsored__c</fullName>
        <label>Event open to press or media sponsored?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSSO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is my HSSO approver? 
See GSA HSSO Approver Listing at https://insite.gsa.gov/portal/content/669402</inlineHelpText>
        <label>HSSO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attendees2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_speaking_presenting__c</fullName>
        <defaultValue>&quot;Download Talking Points document from link above, complete, and attach document under the &apos;Notes and Attachments&apos; section.&quot;</defaultValue>
        <label>If speaking/presenting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instructions_for_Non_Federal_Funding__c</fullName>
        <defaultValue>&quot;Please indicate the type of funding by checking In-Kind Travel, Waived Registration Fee, and/or Discounted Registration. If all funding is provided by GSA or another US government agency, please check None. If discount is provided for all early registrants or a group of people such as Government employees, please check None.&quot;</defaultValue>
        <label>Instructions for Non-Federal Funding:</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>International_Travel__c</fullName>
        <description>Whenever &quot;International Travel&quot; checkbox is checked. Attendee Approval Process will go to &quot;Deputy Administrator&quot; approval after OAS Approves it.</description>
        <label>International Travel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justification_for_Attending__c</fullName>
        <inlineHelpText>Justification must state individual’s specific criteria for attendance (i.e., having meetings with customers or vendors; providing operational support; providing training/speaking regarding GSA mission; and/or meeting training requirements IAW IDPs).</inlineHelpText>
        <label>Justification for Attending</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_GSA_NFS_Policy__c</fullName>
        <defaultValue>&quot;https://insite.gsa.gov/portal/content/641242&quot;</defaultValue>
        <label>Link to GSA NFS Policy</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_HSSO_Approver_List_page__c</fullName>
        <defaultValue>&quot;https://insite.gsa.gov/portal/content/669402&quot;</defaultValue>
        <label>Link to HSSO Approver List page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_NFS_Funding_Acceptance_Worksheet__c</fullName>
        <defaultValue>&quot;https://insite.gsa.gov/portal/mediaId/549657/fileName/NFS_Acceptance_Worksheet.action&quot;</defaultValue>
        <label>Link to NFS Funding Acceptance Worksheet</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Non_Federal_Source_for_Travel__c</fullName>
        <defaultValue>&quot;http://goo.gl/DqyaZS&quot;</defaultValue>
        <label>Link to Non-Federal Source for Travel</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Talking_Points_document__c</fullName>
        <defaultValue>&quot;https://insite.gsa.gov/portal/getMediaData?mediaId=559217&quot;</defaultValue>
        <label>Link to Talking Points document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Non_Federally_Funded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Records that have this box checked will require documentation and will be forwarded to OGC as part of the approval process.</description>
        <inlineHelpText>If the funds for your attendance to this conference are not coming from a federal source you must check this box and attach the necessary documentation.</inlineHelpText>
        <label>Payment by Entity other than GSA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OAS_Approval__c</fullName>
        <label>OAS Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OAS Approval</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presentation_approved_by_the_supervisor__c</fullName>
        <description>Presentation approved by the supervisor?</description>
        <label>Presentation approved by the supervisor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Rescinded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will allow on the Event Approval Managers to check this box on an already approved record to rescind the request. Accessed only via permission set for Event Approval Manager</description>
        <inlineHelpText>Please select when the request is no longer needed or valid (e.g. employee no longer going, employee did not attend, event was cancelled).</inlineHelpText>
        <label>Request Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resubmitting_For_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be used with workflow to allow an attendee to resubmit a request to attend a conference by Changing the Status Value to &quot;New&quot;</description>
        <inlineHelpText>If your request has been denied, please check this box to indicate that you are resubmitting this record for approval.</inlineHelpText>
        <label>Resubmitting For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>See_GSA_Passport_Services_for_more_info__c</fullName>
        <defaultValue>&quot;https://insite.gsa.gov/portal/content/617606&quot;</defaultValue>
        <label>See GSA Passport Services for more info</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Speaking_presenting_at_conference_event__c</fullName>
        <inlineHelpText>Is the employee speaking or giving a presentation at the conference/event?</inlineHelpText>
        <label>Speaking/presenting at conference/event?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Rescinded</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitting_On_Behalf_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Only populate this field if you are submitting on behalf of another person.</inlineHelpText>
        <label>Submitting On Behalf Of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attendees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Expenses__c</fullName>
        <description>Summarizes the total Estimated expenses of an individual Attendee to a conference whether it is GSA sponsored or non GSA Sponsored</description>
        <label>Total Estimated Expenses</label>
        <summarizedField>Attendee_Expense__c.Estimated_Amount__c</summarizedField>
        <summaryForeignKey>Attendee_Expense__c.Attendee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Expenses_t__c</fullName>
        <label>Total Estimated Expenses_t</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trip_Origination_City__c</fullName>
        <inlineHelpText>Please indicate the city your are leaving from (It may not be the same as the city in which you work or live)</inlineHelpText>
        <label>Trip Origination City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trip_Origination_State__c</fullName>
        <inlineHelpText>Please enter the state that you will be leaving from (This may or may not be the same as the state in which you are located).</inlineHelpText>
        <label>Trip Origination State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Speech_Presentation__c</fullName>
        <description>Type of Speech/Presentation</description>
        <label>Type of Speech/Presentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conference Keynote</fullName>
                </value>
                <value>
                    <fullName>Panel discussion/Q&amp;A</fullName>
                </value>
                <value>
                    <fullName>Educational Workshop/Webinar</fullName>
                </value>
                <value>
                    <fullName>Emcee</fullName>
                </value>
                <value>
                    <fullName>Media interview</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attendee_Name__c</columns>
        <columns>Event__c</columns>
        <columns>Attending_Start_Date__c</columns>
        <columns>Attending_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Estimated_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Attendees</fullName>
        <columns>NAME</columns>
        <columns>Attendee_Name__c</columns>
        <columns>Event__c</columns>
        <columns>Attending_Start_Date__c</columns>
        <columns>Attending_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Estimated_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Attendees</label>
    </listViews>
    <listViews>
        <fullName>Denied_Attendees</fullName>
        <columns>NAME</columns>
        <columns>Attendee_Name__c</columns>
        <columns>Event__c</columns>
        <columns>Attending_Start_Date__c</columns>
        <columns>Attending_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Estimated_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <label>Denied Attendees</label>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>Attendee_Name__c</columns>
        <columns>Event__c</columns>
        <columns>Attending_Start_Date__c</columns>
        <columns>Attending_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Estimated_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>Pending_HSSO_Approval</fullName>
        <columns>NAME</columns>
        <columns>Attendee_Name__c</columns>
        <columns>Submitting_On_Behalf_Of__c</columns>
        <columns>Event_Number__c</columns>
        <columns>Attending_Start_Date__c</columns>
        <columns>Attending_End_Date__c</columns>
        <columns>Total_Estimated_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Step_Hidden__c</field>
            <operation>equals</operation>
            <value>Approval Step 2 - User Choose</value>
        </filters>
        <label>Pending HSSO Approval</label>
    </listViews>
</CustomObject>